update openapi and error reponse objets
