# src/main/java/com/studio/eaglebank/config/constants/ErrorResponse.java
@@ -1,0 +1,3 @@
+package com.studio.eaglebank.config.constants;
+
+public record ErrorResponse(String message) {}
